# oXs_on_RP2040

./: .gitignore  CMakeLists.txt  README.md  oXs.uf2  platformio.ini
doc/: Calculate_scale_and_offset.xlsx  Calibration process for MPU6050 used in oXs.docx  FUTABA SBUS (1).docx  IMU_orientation.xlsx  ZWT ESc Real-time.Data.Protocol.docx  fields per protocol.txt  general & setup.txt  gyro concepts.md  some links.txt  ~$IMU_orientation.xlsx  ~$T ESc Real-time.Data.Protocol.docx  ~$libration process for MPU6050 used in oXs.docx
include/: vfs_config.h
lib/MS5611_dir/src/: MS5611.h  MS5611.h.cpp  old MS5611 from oXs.cpp
src/: BMP280.cpp  BMP280.h  EMFButton.cpp  EMFButton.h  I2Cdev.cpp  I2Cdev.h  KalmanFilter.cpp  KalmanFilter.h  KalmanFilter4D.cpp  KalmanFilter4D.h  MPU6050.cpp  MPU6050.h  MPU650_6axis.h  MS5611.cpp  MS5611.h  MS5611.h.cpp  SPL06.cpp  SPL06.h  XGZP6897D.cpp  XGZP6897D.h  ads1115.cpp  ads1115.h  com.cpp  com.h  config.h  config_basic.h  crc.cpp  crc.h  crsf - Copie_cpp.txt  crsf - Copie_h.txt  crsf.cpp  crsf.h  crsf_frames.h  crsf_in.cpp  crsf_in.h  crsf_out.cpp  crsf_out.h  ds18b20.cpp  ds18b20.h  ds18b20.pio  (+120 more)
uf2/: APPLICATION.uf2
